@@ -1,12 +1,11 @@
 package com.bakdata.conquery.sql.conversion.query;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import com.bakdata.conquery.apiv1.query.Query;
 import com.bakdata.conquery.apiv1.query.TableExportQuery;
@@ -14,6 +13,7 @@ import com.bakdata.conquery.apiv1.query.concept.filter.CQTable;
 import com.bakdata.conquery.apiv1.query.concept.specific.CQConcept;
 import com.bakdata.conquery.models.common.daterange.CDateRange;
 import com.bakdata.conquery.models.datasets.Column;
+import com.bakdata.conquery.models.identifiable.ids.specific.ColumnId;
 import com.bakdata.conquery.sql.conversion.NodeConverter;
 import com.bakdata.conquery.sql.conversion.SharedAliases;
 import com.bakdata.conquery.sql.conversion.cqelement.ConversionContext;
@@ -28,7 +28,6 @@ import com.bakdata.conquery.sql.conversion.model.SqlQuery;
 import com.bakdata.conquery.sql.conversion.model.select.FieldWrapper;
 import com.bakdata.conquery.util.TablePrimaryColumnUtil;
 import com.google.common.base.Preconditions;
-import com.google.common.base.Predicate;
 import lombok.RequiredArgsConstructor;
 import org.jooq.Condition;
 import org.jooq.Field;
@@ -40,6 +39,12 @@ import org.jooq.impl.DSL;
 @RequiredArgsConstructor
 public class TableExportQueryConverter implements NodeConverter<TableExportQuery> {
 
+	/**
+	 * Validity date is part of positions, but not when converting to SQL because it might have multiple columns and not just one.
+	 * Thus, we need to apply an offset to the positions.
+	 */
+	private static final int POSITION_OFFSET = 1;
+
 	private final QueryStepTransformer queryStepTransformer;
 
 	@Override
@@ -50,27 +55,27 @@ public class TableExportQueryConverter implements NodeConverter<TableExportQuery
 	@Override
 	public ConversionContext convert(TableExportQuery tableExportQuery, ConversionContext context) {
 
-		QueryStep convertedPrerequisite = convertPrerequisite(tableExportQuery, context);
-		Map<Column, Integer> positions = tableExportQuery.getPositions();
-		CDateRange dateRestriction = CDateRange.of(tableExportQuery.getDateRange());
+		final QueryStep convertedPrerequisite = convertPrerequisite(tableExportQuery, context);
+		final Map<ColumnId, Integer> positions = tableExportQuery.getPositions();
+		final CDateRange dateRestriction = CDateRange.of(tableExportQuery.getDateRange());
 
-		List<QueryStep> convertedTables = tableExportQuery.getTables().stream()
-														  .flatMap(concept -> concept.getTables().stream().map(table -> convertTable(
-																  table,
-																  concept,
-																  dateRestriction,
-																  convertedPrerequisite,
-																  positions,
-																  context
-														  )))
-														  .toList();
+		final List<QueryStep> convertedTables = tableExportQuery.getTables().stream()
+																.flatMap(concept -> concept.getTables().stream().map(table -> convertTable(
+																		table,
+																		concept,
+																		dateRestriction,
+																		convertedPrerequisite,
+																		positions,
+																		context
+																)))
+																.toList();
 
-		QueryStep unionedTables = QueryStep.createUnionAllStep(
+		final QueryStep unionedTables = QueryStep.createUnionAllStep(
 				convertedTables,
 				null, // no CTE name required as this step will be the final select
 				List.of(convertedPrerequisite)
 		);
-		Select<Record> selectQuery = queryStepTransformer.toSelectQuery(unionedTables);
+		final Select<Record> selectQuery = queryStepTransformer.toSelectQuery(unionedTables);
 
 		return context.withFinalQuery(new SqlQuery(selectQuery, tableExportQuery.getResultInfos()));
 	}
@@ -80,14 +85,14 @@ public class TableExportQueryConverter implements NodeConverter<TableExportQuery
 	 */
 	private static QueryStep convertPrerequisite(TableExportQuery exportQuery, ConversionContext context) {
 
-		ConversionContext withConvertedPrerequisite = context.getNodeConversions().convert(exportQuery.getQuery(), context);
+		final ConversionContext withConvertedPrerequisite = context.getNodeConversions().convert(exportQuery.getQuery(), context);
 		Preconditions.checkArgument(withConvertedPrerequisite.getQuerySteps().size() == 1, "Base query conversion should produce exactly 1 QueryStep");
-		QueryStep convertedPrerequisite = withConvertedPrerequisite.getLastConvertedStep();
+		final QueryStep convertedPrerequisite = withConvertedPrerequisite.getLastConvertedStep();
 
-		Selects prerequisiteSelects = convertedPrerequisite.getQualifiedSelects();
-		Selects selects = Selects.builder()
-								 .ids(new SqlIdColumns(prerequisiteSelects.getIds().getPrimaryColumn()))
-								 .build();
+		final Selects prerequisiteSelects = convertedPrerequisite.getQualifiedSelects();
+		final Selects selects = Selects.builder()
+									   .ids(new SqlIdColumns(prerequisiteSelects.getIds().getPrimaryColumn()))
+									   .build();
 
 		return QueryStep.builder()
 						.cteName(FormCteStep.EXTRACT_IDS.getSuffix())
@@ -107,30 +112,25 @@ public class TableExportQueryConverter implements NodeConverter<TableExportQuery
 			CQConcept concept,
 			CDateRange dateRestriction,
 			QueryStep convertedPrerequisite,
-			Map<Column, Integer> positions,
+			Map<ColumnId, Integer> positions,
 			ConversionContext context
 	) {
-		Field<Object> primaryColumn = TablePrimaryColumnUtil.findPrimaryColumn(cqTable.getConnector().getTable(), context.getConfig());
-		SqlIdColumns ids = new SqlIdColumns(primaryColumn);
-		String conceptConnectorName = context.getNameGenerator().conceptConnectorName(concept, cqTable.getConnector());
-		Optional<ColumnDateRange> validityDate = convertTablesValidityDate(cqTable, conceptConnectorName, dateRestriction, context);
+		final Field<Object> primaryColumn = TablePrimaryColumnUtil.findPrimaryColumn(cqTable.getConnector().resolve().getResolvedTable(), context.getConfig());
+		final SqlIdColumns ids = new SqlIdColumns(primaryColumn);
+		final String conceptConnectorName =
+				context.getNameGenerator().conceptConnectorName(concept, cqTable.getConnector().resolve(), context.getSqlPrintSettings().getLocale());
+		final Optional<ColumnDateRange> validityDate = convertTablesValidityDate(cqTable, conceptConnectorName, context);
 
-		List<Field<?>> exportColumns = new ArrayList<>();
-		exportColumns.add(createSourceInfoSelect(cqTable));
+		final List<FieldWrapper<?>> exportColumns = initializeFields(cqTable, positions);
 
-		positions.entrySet().stream()
-				 .sorted(Comparator.comparingInt(Map.Entry::getValue))
-				 .map(entry -> createColumnSelect(cqTable, entry))
-				 .forEach(exportColumns::add);
+		final Selects selects = Selects.builder()
+									   .ids(ids)
+									   .validityDate(validityDate)
+									   .sqlSelects(exportColumns)
+									   .build();
 
-		Selects selects = Selects.builder()
-								 .ids(ids)
-								 .validityDate(validityDate)
-								 .sqlSelects(exportColumns.stream().map(FieldWrapper::new).collect(Collectors.toList()))
-								 .build();
-
-		List<Condition> filters = cqTable.getFilters().stream().map(filterValue -> filterValue.convertForTableExport(ids, context)).toList();
-		Table<Record> joinedTable = joinConnectorTableWithPrerequisite(cqTable, ids, convertedPrerequisite, context);
+		final List<Condition> filters = cqTable.getFilters().stream().map(filterValue -> filterValue.convertForTableExport(ids, context)).toList();
+		final Table<Record> joinedTable = joinConnectorTableWithPrerequisite(cqTable, ids, convertedPrerequisite, dateRestriction, context);
 
 		return QueryStep.builder()
 						.cteName(conceptConnectorName)
@@ -140,67 +140,78 @@ public class TableExportQueryConverter implements NodeConverter<TableExportQuery
 						.build();
 	}
 
-	private static Optional<ColumnDateRange> convertTablesValidityDate(CQTable table, String alias, CDateRange dateRestriction, ConversionContext context) {
+	private static Optional<ColumnDateRange> convertTablesValidityDate(CQTable table, String alias, ConversionContext context) {
 		if (table.findValidityDate() == null) {
 			return Optional.of(ColumnDateRange.empty());
 		}
-		SqlFunctionProvider functionProvider = context.getSqlDialect().getFunctionProvider();
-		ColumnDateRange validityDate = functionProvider.forValidityDate(table.findValidityDate(), dateRestriction);
+		final SqlFunctionProvider functionProvider = context.getSqlDialect().getFunctionProvider();
+		final ColumnDateRange validityDate = functionProvider.forValidityDate(table.findValidityDate());
 		// when exporting tables, we want the validity date as a single-column daterange string expression straightaway
-		Field<String> asStringExpression = functionProvider.encloseInCurlyBraces(functionProvider.daterangeStringExpression(validityDate));
+		final Field<String> asStringExpression = functionProvider.encloseInCurlyBraces(functionProvider.daterangeStringExpression(validityDate));
 		return Optional.of(ColumnDateRange.of(asStringExpression).asValidityDateRange(alias));
 	}
 
-	private static Field<String> createSourceInfoSelect(CQTable cqTable) {
-		String tableName = cqTable.getConnector().getTable().getName();
-		return DSL.val(tableName).as(SharedAliases.SOURCE.getAlias());
-	}
+	private static List<FieldWrapper<?>> initializeFields(CQTable cqTable, Map<ColumnId, Integer> positions) {
 
-	private static Field<?> createColumnSelect(CQTable table, Map.Entry<Column, Integer> entry) {
+		final Field<?>[] exportColumns = createPlaceholders(positions);
 
-		Column column = entry.getKey();
-		Integer columnPosition = entry.getValue();
-		String columnName = "%s-%s".formatted(column.getName(), columnPosition);
+		exportColumns[0] = createSourceInfoSelect(cqTable);
 
-		if (!isColumnOfTable(column, table)) {
-			return DSL.inline(null, Object.class).as(columnName);
+		for (Column column : cqTable.getConnector().resolve().getResolvedTable().getColumns()) {
+			// e.g. date column(s) are handled separately and not part of positions
+			if (!positions.containsKey(column.getId())) {
+				continue;
+			}
+			final int position = positions.get(column.getId()) - POSITION_OFFSET;
+			exportColumns[position] = createColumnSelect(column, position);
 		}
-		return DSL.field(DSL.name(column.getTable().getName(), column.getName()))
-				  .as(columnName);
-	}
 
-	private static boolean isColumnOfTable(Column column, CQTable table) {
-		return columnIsConnectorColumn(column, table)
-			   || columnIsSecondaryIdOfConnectorTable(column, table)
-			   || columnIsConnectorTableColumn(column, table);
-	}
-
-	private static boolean columnIsConnectorTableColumn(Column column, CQTable table) {
-		return matchesTableColumnOn(table, tableColumn -> tableColumn == column);
-	}
-
-	private static boolean columnIsSecondaryIdOfConnectorTable(Column column, CQTable table) {
-		return column.getSecondaryId() != null && matchesTableColumnOn(table, tableColumn -> tableColumn.getSecondaryId() == column.getSecondaryId());
-	}
-
-	private static boolean matchesTableColumnOn(CQTable table, Predicate<Column> condition) {
-		return Arrays.stream(table.getConnector().getTable().getColumns()).anyMatch(condition);
-	}
-
-	private static boolean columnIsConnectorColumn(Column column, CQTable table) {
-		return table.getConnector().getColumn() != null && table.getConnector().getColumn() == column;
+		return Arrays.stream(exportColumns).map(FieldWrapper::new).collect(Collectors.toList());
 	}
 
 	private static Table<Record> joinConnectorTableWithPrerequisite(
 			CQTable cqTable,
 			SqlIdColumns ids,
 			QueryStep convertedPrerequisite,
+			CDateRange dateRestriction,
 			ConversionContext context
 	) {
-		SqlFunctionProvider functionProvider = context.getSqlDialect().getFunctionProvider();
-		Table<Record> connectorTable = DSL.table(DSL.name(cqTable.getConnector().getTable().getName()));
-		List<Condition> joinOnIds = ids.join(convertedPrerequisite.getQualifiedSelects().getIds());
-		return functionProvider.innerJoin(connectorTable, convertedPrerequisite, joinOnIds);
+		final SqlFunctionProvider functionProvider = context.getSqlDialect().getFunctionProvider();
+		final Table<Record> connectorTable = DSL.table(DSL.name(cqTable.getConnector().resolve().getResolvedTableId().getTable()));
+		final Table<Record> convertedPrerequisiteTable = DSL.table(DSL.name(convertedPrerequisite.getCteName()));
+
+		final ColumnDateRange validityDate = functionProvider.forValidityDate(cqTable.findValidityDate());
+		final List<Condition> joinConditions = Stream.concat(
+				ids.join(convertedPrerequisite.getQualifiedSelects().getIds()).stream(),
+				Stream.of(functionProvider.dateRestriction(functionProvider.forCDateRange(dateRestriction), validityDate))
+		).toList();
+
+		return functionProvider.innerJoin(connectorTable, convertedPrerequisiteTable, joinConditions);
+	}
+
+	private static Field<?>[] createPlaceholders(Map<ColumnId, Integer> positions) {
+
+		final int size = TableExportQuery.calculateWidth(positions) - POSITION_OFFSET;
+		final Field<?>[] exportColumns = new Field[size];
+
+		// if columns have the same computed position, they can share a common name because they will be unioned over multiple tables anyway
+		for (int index = 0; index < exportColumns.length; index++) {
+			final Field<?> columnSelect = DSL.inline(null, Object.class).as("null-%d".formatted(index));
+			exportColumns[index] = columnSelect;
+		}
+
+		return exportColumns;
+	}
+
+	private static Field<String> createSourceInfoSelect(CQTable cqTable) {
+		final String tableName = cqTable.getConnector().resolve().getResolvedTableId().getTable();
+		return DSL.val(tableName).as(SharedAliases.SOURCE.getAlias());
+	}
+
+	private static Field<?> createColumnSelect(Column column, int position) {
+		final String columnName = "%s-%s".formatted(column.getName(), position);
+		return DSL.field(DSL.name(column.getTable().getName(), column.getName()))
+				  .as(columnName);
 	}
 
 }
